<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rules"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.trekk.thinkconference.RulesActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_horizontal_margin"
                android:src="@drawable/img_thinkevent_logo"
                tools:ignore="RtlHardcoded"
                android:contentDescription="@string/think_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rules_title"
                android:layout_marginTop="@dimen/small_vertical_margin"
                android:layout_marginLeft="@dimen/small_vertical_margin"
                android:layout_marginRight="@dimen/small_vertical_margin"
                android:textAppearance="@style/TextViewCustomFont_h1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rules_body"
                android:layout_marginTop="@dimen/small_vertical_margin"
                android:layout_marginLeft="@dimen/small_vertical_margin"
                android:layout_marginRight="@dimen/small_vertical_margin"
                android:textAppearance="@style/TextViewCustomFont_body" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_footer"
                android:gravity="center_horizontal|bottom"
                android:layout_gravity="bottom"
                android:layout_alignParentBottom="true"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:textAppearance="@style/TextViewCustomFont_body" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
