<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The first child in the layout is for the main Activity UI-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_title"
                android:layout_marginTop="@dimen/small_vertical_margin"
                android:layout_marginLeft="@dimen/small_vertical_margin"
                android:layout_marginRight="@dimen/small_vertical_margin"
                android:textAppearance="@style/TextViewCustomFont_h1"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/contact_link"
                android:text="@string/contact_body"
                android:layout_marginTop="@dimen/small_vertical_margin"
                android:layout_marginLeft="@dimen/small_vertical_margin"
                android:layout_marginRight="@dimen/small_vertical_margin"
                android:textAppearance="@style/TextViewCustomFont_body"
                android:autoLink="web" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/img_think_logo_black"
                android:contentDescription="@string/think_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_footer"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/medium_horizontal_margin"
                android:textAppearance="@style/TextViewCustomFont_body" />

        </LinearLayout>

    </RelativeLayout>

    <!-- Side navigation drawer UI -->
    <LinearLayout
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:background="@color/colorGray"
        android:padding="@dimen/small_vertical_margin" >

        <ListView
            android:id="@+id/navList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:divider="@color/colorWhite"
            android:dividerHeight="1sp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@color/colorGray" />

        <include layout="@layout/drawer_layout" />

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>