<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The first child in the layout is for the main Activity UI-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/about_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/bkgrd_hdr"
                    android:contentDescription="@string/think_logo" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xlarge_horizontal_margin"
                    android:layout_marginLeft="@dimen/medium_horizontal_margin"
                    android:layout_marginRight="@dimen/xxlarge_horizontal_margin"
                    android:src="@drawable/think_logo_white"
                    tools:ignore="RtlHardcoded"
                    android:contentDescription="@string/think_logo" />

            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_title"
                android:layout_marginTop="@dimen/small_vertical_margin"
                android:layout_marginLeft="@dimen/small_vertical_margin"
                android:layout_marginRight="@dimen/small_vertical_margin"
                android:textAppearance="@style/TextViewCustomFont_h1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_body"
                android:layout_marginTop="@dimen/small_vertical_margin"
                android:layout_marginLeft="@dimen/small_vertical_margin"
                android:layout_marginRight="@dimen/small_vertical_margin"
                android:textAppearance="@style/TextViewCustomFont_body" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_footer"
            android:gravity="center_horizontal|bottom"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:textAppearance="@style/TextViewCustomFont_body" />

    </RelativeLayout>

    <!-- Side navigation drawer UI -->
    <LinearLayout
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:background="@color/colorGray"
        android:padding="10dp" >

        <ListView
            android:id="@+id/navList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:divider="@color/colorWhite"
            android:dividerHeight="1sp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@color/colorGray" />

        <include layout="@layout/drawer_layout" />

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
