<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/small_horizontal_margin"
                android:layout_marginRight="@dimen/medium_horizontal_margin"
                android:src="@drawable/img_thinkevent_logo"
                tools:ignore="RtlHardcoded"
                android:contentDescription="@string/think_logo"
                android:layout_gravity="center_vertical" />

            <com.Trekk.ThinkAR.MyView
                android:layout_width="0dp"
                android:layout_height="175dp"
                android:layout_weight="1"
                android:id="@+id/vendor_chart"
                custom:circleColor="@color/colorWhite"
                custom:circleLabel="@string/think_circle_label"
                custom:labelColor="@color/colorPrimary"/>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/vendor_table"
            android:layout_marginTop="@dimen/small_horizontal_margin"
            android:stretchColumns="*">

            <!-- 3 columns -->
            <TableRow
                android:id="@+id/tableRow_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorGray">

                <TextView
                    android:id="@+id/tableHeader_status"
                    android:text="@string/think__table_status"
                    android:padding="@dimen/small_vertical_margin"
                    android:textAppearance="@style/TextViewCustomFont_table_header" />

                <TextView
                    android:id="@+id/tableHeader_vendor"
                    android:text="@string/think__table_vendor"
                    android:padding="@dimen/small_vertical_margin"
                    android:textAppearance="@style/TextViewCustomFont_table_header" />

                <TextView
                    android:id="@+id/tableHeader_booth"
                    android:text="@string/think__table_booth"
                    android:padding="@dimen/small_vertical_margin"
                    android:textAppearance="@style/TextViewCustomFont_table_header" />

            </TableRow>

            <!-- 3 columns -->
            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite">

                <TextView
                    android:id="@+id/tableHeader_status_tableRow1"
                    android:text="@string/think__table_status"
                    android:padding="@dimen/small_vertical_margin"
                    android:textAppearance="@style/TextViewCustomFont_body" />

                <TextView
                    android:text="@string/think__table_vendor"
                    android:padding="@dimen/small_vertical_margin"
                    android:textAppearance="@style/TextViewCustomFont_body" />

                <TextView
                    android:text="@string/think__table_booth"
                    android:padding="@dimen/small_vertical_margin"
                    android:textAppearance="@style/TextViewCustomFont_body" />

            </TableRow>

            <!-- 3 columns -->
            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite">

                <TextView
                    android:id="@+id/tableHeader_status_tableRow2"
                    android:text="@string/think__table_status"
                    android:padding="@dimen/small_vertical_margin"
                    android:textAppearance="@style/TextViewCustomFont_body" />

                <TextView
                    android:text="@string/think__table_vendor"
                    android:padding="@dimen/small_vertical_margin"
                    android:textAppearance="@style/TextViewCustomFont_body" />

                <TextView
                    android:text="@string/think__table_booth"
                    android:padding="@dimen/small_vertical_margin"
                    android:textAppearance="@style/TextViewCustomFont_body" />

            </TableRow>

            <!-- 3 columns -->
            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite">

                <TextView
                    android:id="@+id/tableHeader_status_tableRow3"
                    android:text="@string/think__table_status"
                    android:padding="@dimen/small_vertical_margin"
                    android:textAppearance="@style/TextViewCustomFont_body" />

                <TextView
                    android:text="@string/think__table_vendor"
                    android:padding="@dimen/small_vertical_margin"
                    android:textAppearance="@style/TextViewCustomFont_body" />

                <TextView
                    android:text="@string/think__table_booth"
                    android:padding="@dimen/small_vertical_margin"
                    android:textAppearance="@style/TextViewCustomFont_body" />

            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_footer"
            android:gravity="center_horizontal|bottom"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:textAppearance="@style/TextViewCustomFont_body" />

    </LinearLayout>

    <!-- Side navigation drawer UI -->
    <LinearLayout
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:background="@color/colorGray"
        android:padding="@dimen/small_vertical_margin" >

        <ListView
            android:id="@+id/navList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:divider="@color/colorWhite"
            android:dividerHeight="1sp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@color/colorGray" />

        <include layout="@layout/drawer_layout" />

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>